fix notes layout issue and hover notes make linked items pop after pres

--- a/web/sass/retro.scss
+++ b/web/sass/retro.scss
@@ -1,7 +1,12 @@
 @import "modal";
 
-.notes {
-  padding: 1rem;
+.reduced-vertical-padding {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.pointer-hand {
+  cursor: pointer;
 }
 
 .covered {
